--- a/mini-app/package.json
+++ b/mini-app/package.json
@@ -7,12 +7,13 @@
     "start": "node ./server/index.js"
   },
   "dependencies": {
+    "apollo-boost": "^0.1.21",
+    "apollo-datasource-rest": "^0.2.0",
     "apollo-server-express": "^2.2.2",
     "express": "^4.16.4",
     "graphql": "^14.0.2",
-    "next": "^7.0.2",
-    "apollo-boost": "^0.1.21",
     "isomorphic-unfetch": "^3.0.0",
+    "next": "^7.0.2",
     "react": "^16.6.3",
     "react-apollo": "^2.3.1",
     "react-dom": "^16.6.3"
